docs/tests/parser/control_flow/invalid/SwitchCaseExpr.b
fn void test() {
    switch (x) {
        case x + 1 {
        }
    }
}
